--- a/공통.md
+++ b/공통.md
@@ -10,3 +10,6 @@ x, y축  >>  아래 4줄이 공식처럼 쓰임(top right 수정 가능)
             right: 50%;
             transform: translate(50%, -50%)
 
+<footer>
+   <address>Copyright &copy; Allright Reserved.</address>
+</footer>
