--- a/공통.md
+++ b/공통.md
@@ -10,6 +10,12 @@ x, y축  >>  아래 4줄이 공식처럼 쓰임(top right 수정 가능)
             right: 50%;
             transform: translate(50%, -50%)
 
+.clearfix::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
 <footer>
-   <address>Copyright &copy; Allright Reserved.</address>
+   <address>Copyright &copy; Allright eserved.</address>
 </footer>
