--- a/공통.md
+++ b/공통.md
@@ -1,21 +1,50 @@
-reset css 링크
+# reset css 링크
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 
+# css에 외부 css파일 링크
+@import url ()
 
-박스 x, y축 중앙정렬 
-   x축  >> margin: # auto #;
-x, y축  >>  아래 4줄이 공식처럼 쓰임(top right 수정 가능)
-            position: absolute;
-            top: 50%;
-            right: 50%;
-            transform: translate(50%, -50%)
 
+# /* reset */
+a {
+    color: inherit;
+    text-decoration: none;
+}
+button, input {
+    outline: none;
+    border: none;
+    color: inherit;
+}
+
+/* common */
 .clearfix::after {
     content: '';
     display: block;
     clear: both;
 }
 
-<footer>
-   <address>Copyright &copy; Allright eserved.</address>
-</footer>
+body {
+    font-size: 14px;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+
+
+# 박스 x, y축 중앙정렬 
+   x축  >> margin: # auto;
+   y축  >> height와 line-height의 높이를 같게
+x, y축  >>  아래 4줄이 공식처럼 쓰임(top right 수정 가능)
+            position: absolute;
+            top: 50%;
+            right: 50%;
+            transform: translate(50%, -50%)
+
+# background 넣기
+.main {
+    background: url('../img/vis_4.jpg') no-repeat center /cover fixed;
+       backgroud-position: center   > 가운데로   
+       background-size: cover;      > 대충 꽉 차게 만듬
+       height: 100vh;            > 세로를 내가 보는 화면 전체로
+}
+
+# 저작권 표시
+Copyright &copy; Allright eserved.
