--- a/공통.md
+++ b/공통.md
@@ -48,3 +48,11 @@ x, y축  >>  아래 4줄이 공식처럼 쓰임(top right 수정 가능)
 
 # 저작권 표시
 Copyright &copy; Allright eserved.
+
+# wrap 지정 편하게
+감쌀 영역 드래그지정 후
+Ctrl + Shift + P 누르고
+wrap 검색 후 
+약어로 래핑(Wrap with Abbreviation)
+선택 후 태그명 직접 입력
+ex) section.abc
