--- a/note/0. 참고.md
+++ b/note/0. 참고.md
@@ -30,13 +30,19 @@ body {
 
 
 # 박스 x, y축 중앙정렬 
-   x축  >> margin: # auto;
-   y축  >> height와 line-height의 높이를 같게
-x, y축  >>  아래 4줄이 공식처럼 쓰임(top right 수정 가능)
-            position: absolute;
-            top: 50%;
-            right: 50%;
-            transform: translate(50%, -50%)
+- x축  >> margin: # auto;
+- y축  >> height와 line-height의 높이를 같게
+- x, y축 
+.parent{
+    position: relative;
+}
+.child{
+    position: absolute;
+    top: 50%;
+    left: 50%
+    transform: translate(-50%, -50%);
+}
+
 
 # background 넣기
 .main {
